--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
         <title>Document</title>
     </head>
     {% include 'partials/_header.html' %}
-    <body class="min-h-screen flex flex-col">
+    <body class="min-h-screen flex flex-col text-gray-700">
         {{ content | safe }}
         {% include 'partials/_footer.html' %}
     </body>
