--- a/_includes/sections/hero.html
+++ b/_includes/sections/hero.html
@@ -3,10 +3,13 @@
         <img src="/assets/hero.jpg" alt="" class="max-h-[32rem]"  />
         <div>
             <h1 class="text-4xl font-bold leading-[1.1] text-green-500 md:text-5xl">
-                Hello, world!
+                Hello, World!
             </h1>
             <p class="pt-4 text-lg leading-[1.5] text-white ">
-                Lorem ipsum dolor it amet conectetur adipisicing elit. Saepe veniam sed maxime qui enim architecto quo.
+                Exploring the fun in Web development. Using Eleventy and TailwindCSS as a technology stack.
+            </p>
+            <p class="pt-4 text-lg leading-[1.5] text-white ">
+                An expedition led by <a href="https://www.kapp.technology" target="_blank">www.kapp.technology</a>.
             </p>
         </div>
     </div>
