--- a/_includes/partials/_footer.html
+++ b/_includes/partials/_footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-white w-full text-center px-6 md:px-8 py-2 mt-auto">
 
-    <small>Copyrights &copy; 2022 | All rights reserved.</small>
+    <small>Copyrights &copy; 2022 <a href="https://www.kapp.technology" target="_blank">Kapp Technology GmbH</a>  | All rights reserved.</small>
 
 </footer>
