--- a/_includes/sections/services.njk
+++ b/_includes/sections/services.njk
@@ -1,4 +1,4 @@
-<section class="px-8 pt-16">
+<section class="py-8 pt-16">
     <h2 class="text-center text-4xl font-bold">
         Many options to choos from
     </h2>
