--- a/index.njk
+++ b/index.njk
@@ -5,3 +5,5 @@ layout: 'layouts/base.njk'
 {% include 'sections/hero.html' %}
 
 {% include 'sections/services.njk' %}
+
+{% include 'sections/details.html' %}
