add menu  status

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/styles.css" crossorigin="anonymous"/>
         <title>Document</title>
     </head>
-    {% include 'partials/_header.html' %}
+    {% include 'partials/_header.njk' %}
     <body class="min-h-screen flex flex-col text-gray-700">
         {{ content | safe }}
         {% include 'partials/_footer.html' %}
