--- a/_includes/partials/_header.njk
+++ b/_includes/partials/_header.njk
@@ -1,14 +1,14 @@
 <header class="w-full bg-white flex justify-between items-center px-6 py-4 md:px-8">
     <a href="#">
-        <img src="/assets/logo.svg" alt="logo" class="h-12" />
+        <img src="/assets/logo.svg" alt="logo" class="h-12"/>
     </a>
     <nav>
         <ul class="flex gap-10 font-semibold text-sm">
             <li>
-                <a href="/">Home</a>
+                <a href="/" class="{{ 'text-orange-500' if url === 'home'}}">Home</a>
             </li>
             <li>
-                <a href="/about">About</a>
+                <a href="/about" class="{{ 'text-orange-500' if url === 'about'}}">About</a>
             </li>
         </ul>
     </nav>
