--- a/_includes/sections/details.html
+++ b/_includes/sections/details.html
@@ -11,6 +11,7 @@
                 suscipit
                 lobortis nisl ut aliquip ex ea commodo consequat.
             </p>
+            <!-- Example of TailwindCSS button:  -->
             <a href="https://www.kapp.technology/contact/"
                 class="flex-shrink0 rounded-full bg-gradient-to-b from-orange-400 via-purple-500  to-blue-500 py-2 px-12 font-semibold text-white">Contact
                 us</a>
