--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="/css/styles.css" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="/assets/css/styles.css" crossorigin="anonymous"/>
         <title>Document</title>
     </head>
     {% include 'partials/_header.njk' %}
