--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="/assets/css/styles.css" crossorigin="anonymous"/>
-        <title>Document</title>
+        <title>{{ url }}</title>
     </head>
     {% include 'partials/_header.njk' %}
     <body class="min-h-screen flex flex-col text-gray-700">
