--- a/src/about.njk
+++ b/src/about.njk
@@ -1,7 +1,7 @@
 ---
-layout: 'layouts/base.njk'
+layout: 'base.njk'
 url: 'about'
 date: git Last Modified
 ---
 
-{% include 'sections/about.html' %}
+{% include 'sections/about.njk' %}
