--- a/src/_includes/sections/about.njk
+++ b/src/_includes/sections/about.njk
@@ -1,25 +1,25 @@
 <section class="bg-gradient-to-b from-orange-400 via-purple-500  to-blue-500  py-12 px-8">
   <div class="mx-auto max-w-5xl">
     <h2 class="text-4xl  md:text-5xl font-bold sm:text-center md:text-left text-green-500">About</h2>
-   
-      <p class="mt-4 sm:text-center md:text-left text-white">
-        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet
-        doming id quod mazim placerat fac er possim assum. Lorem ipsum dolor sit
-        amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-        minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-        nisl ut aliquip ex ea commodo consequat.
-      </p>
-    <div class="flex flex-wrap justify-center">
-     {% for blg in collections.blogs %}
-     <ul>
-     <li>
-        <a href="{{ blg.url }}">{{blg.data.title}} </a>
-
-     </li>
-     </ul>
-     {% endfor %}
+    <p class="mt-4 sm:text-center md:text-left text-white">
+      Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat fac er possim
+      assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+      dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+      lobortis nisl ut aliquip ex ea commodo consequat.
+    </p>
+  </div>
+</section>
+<section class="py-12 px-12">
+  <div class="mx-auto max-w-5xl">
+    <div class=" ">
+      <ul class="list-decimal list-inside">
+        {% for blg in collections.blogs %}
+          <li>
+            <a href="{{ blg.url }}">{{ blg.data.title }}
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
     </div>
-
   </div>
 </section>
