--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -8,6 +8,9 @@
                 <a href="/" class="{{ 'text-orange-500' if url === 'home'}}">Home</a>
             </li>
             <li>
+                <a href="/blog" class="{{ 'text-orange-500' if url === 'blog'}}">Blog</a>
+            </li>
+            <li>
                 <a href="/about" class="{{ 'text-orange-500' if url === 'about'}}">About</a>
             </li>
         </ul>
