--- a/src/_includes/sections/blog.njk
+++ b/src/_includes/sections/blog.njk
@@ -1,6 +1,6 @@
 <section class="bg-gradient-to-b from-orange-400 via-purple-500  to-blue-500  py-12 px-8">
   <div class="mx-auto max-w-5xl">
-    <h2 class="text-4xl  md:text-5xl font-bold sm:text-center md:text-left text-green-500">About</h2>
+    <h2 class="text-4xl  md:text-5xl font-bold sm:text-center md:text-left text-green-500">Blog Articles</h2>
     <p class="mt-4 sm:text-center md:text-left text-white">
       Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat fac er possim
       assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
@@ -10,7 +10,7 @@
   </div>
 </section>
 <section class="py-12 px-12">
-  <div class="mx-auto max-w-5xl">
+  <div class="mx-auto max-w-3xl">
     <div class=" ">
       <ul class="text-5xl list-square">
         {% for blg in collections.blog %}
