--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1474,6 +1474,14 @@ select {
   line-height: 1.5;
 }
 
+.leading-\[1\.9\] {
+  line-height: 1.9;
+}
+
+.leading-\[1\.\] {
+  line-height: 1.;
+}
+
 .text-orange-500 {
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
