--- a/src/_includes/sections/about.njk
+++ b/src/_includes/sections/about.njk
@@ -11,16 +11,17 @@
 </section>
 <section class="py-12 px-12">
   <div class="mx-auto max-w-5xl">
-    <div class=" ">
-      <ul class="text-5xl list-square">
-        {% for blg in collections.blog %}
-          <li class="list-item">
-            <h1 class="text-5xl">
-              <a href="{{ blg.url }}" class="">{{ blg.data.title }}
-              </a>
-            </h1>
-          </li>
-        {% endfor %}
-      </ul>
+
+    <article>
+      <h2 class="text-3xl  md:text-3xl font-bold sm:text-center md:text-left text-green-500">
+       Team
+      </h2>
+      <p class="mt-4 text-center md:text-left text-gray">
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+        nisl ut aliquip ex ea commodo consequat.
+      </p>
+    </article>
+   
     </div>
   </section>
