--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1579,6 +1579,11 @@ select {
     font-size: 3rem;
     line-height: 1;
   }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
