--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,8 @@
 ---
-layout: 'base.njk'
+layout: 'home.njk'
 url: 'home'
+title: 'Home Page'
+description: 'Home is the start of everything.'
 date: git Last Modified
 ---
 
